--- a/rtm-offer-page/styles/offer.scss
+++ b/rtm-offer-page/styles/offer.scss
@@ -1,4 +1,4 @@
-@import "../../../rtm-offer/fonts/fonts.css";
+@import "../../../rtm-offer/fonts/search-fonts.css";
 @import "mixins";
 
 * {
@@ -353,7 +353,676 @@ body {
 
     &-blocks {
       &-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
 
+        @include for-tablet {
+          gap: 10px;
+        }
+
+        @include for-desktop {
+          gap: 12px;
+        }
+
+        @include for-desktop-large {
+          gap: 15px;
+        }
+      }
+
+      &-group {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+
+        @include for-tablet {
+          display: grid;
+          gap: 10px;
+          min-height: 239px;
+          grid-template-columns: 1fr 241px;
+        }
+
+        @include for-desktop {
+          grid-template-columns: 1fr 311px;
+        }
+
+        @include for-desktop-large {
+          min-height: 280px;
+          grid-template-columns: 1fr 416px;
+        }
+
+        @include for-desktop-xl {
+          grid-template-columns: 1fr 440px;
+        }
+
+        &--expanded {
+          @include for-tablet {
+            min-height: 300px;
+          }
+        }
+      }
+
+      &-item {
+        padding: 20px 41px 20px 20px;
+        border-radius: 12px;
+
+        &--features {
+          min-height: 163px;
+          gap: 43px;
+          width: 100%;
+          border: 1px solid #B8B8B8;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+
+          @include for-tablet {
+            min-height: 100%;
+            padding: 40px 55px 40px 30px;
+          }
+
+          @include for-desktop {
+            padding: 40px 197px 40px 50px;
+          }
+
+          @include for-desktop-large {
+            gap: 32px;
+            padding: 40px 148px 50px 50px;
+          }
+        }
+
+        &--price {
+          background: #EBFAFF;
+          display: flex;
+          gap: 8px;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          @include for-tablet {
+            gap: 12px;
+          }
+
+          @include for-desktop-large {
+            gap: 25px;
+          }
+        }
+
+        &--roi {
+          border-radius: 12px;
+          border: 1px solid #CFCFCF;
+          background: #FFF;
+          padding: 0;
+          min-height: 249px;
+          overflow-x: auto;
+
+          @include for-tablet {
+            min-height: 100%;
+          }
+        }
+
+        &--diagram {
+          border-radius: 16px;
+          background: #F7F9FB;
+          min-height: 300px;
+          padding: 0;
+
+          @include for-tablet {
+            min-height: 100%;
+          }
+        }
+
+        &--payback {
+          padding: 20px;
+          border-radius: 16px;
+          border: 1px solid #B8B8B8;
+          background: #FFF;
+
+          @include for-tablet {
+            padding: 25px 30px;
+          }
+
+          @include for-desktop {
+            padding: 30px 50px 33px;
+          }
+
+          @include for-desktop-large {
+            padding: 30px 109px 33px 50px;
+          }
+        }
+
+        &--form {
+          padding: 30px 20px;
+          border-radius: 16px;
+          background: #EBFAFF;
+
+          @include for-tablet {
+            padding: 30px;
+          }
+
+          @include for-desktop {
+            padding: 30px 50px;
+          }
+        }
+      }
+
+      &-feature {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 4px;
+
+        @include for-tablet {
+          gap: 11px;
+        }
+
+        @include for-desktop-large {
+          gap: 10px;
+        }
+
+        &-group {
+          display: grid;
+          grid-template-columns: 1fr 100px;
+
+          @include for-desktop-large {
+            grid-template-columns: 1fr 180px;
+          }
+        }
+
+        &-title {
+          margin: 0;
+          font-family: 'Inter', sans-serif;
+          font-size: 12px;
+          font-weight: 400;
+
+          @include for-tablet {
+            font-size: 16px;
+          }
+
+          @include for-desktop-large {
+            font-size: 18px;
+          }
+        }
+
+        &-text {
+          margin: 0;
+          color: #000;
+          font-size: 18px;
+          font-weight: 700;
+
+          @include for-tablet {
+            font-size: 24px;
+          }
+
+          @include for-desktop-large {
+            font-size: 40px;
+          }
+        }
+      }
+
+      &-price {
+        &-title {
+          margin: 0;
+          color: #000;
+          font-family: 'Inter', sans-serif;
+          font-size: 12px;
+          font-weight: 500;
+
+          @include for-tablet {
+            font-size: 16px;
+          }
+
+          @include for-desktop-large {
+            font-size: 18px;
+            padding-left: 59px;
+            padding-right: 34px;
+          }
+        }
+
+        &-text {
+          margin: 0;
+          color: #000;
+          font-family: 'Inter', sans-serif;
+          font-size: 18px;
+          font-weight: 500;
+
+          @include for-tablet {
+            font-size: 24px;
+          }
+
+          @include for-desktop-large {
+            font-size: 30px;
+          }
+
+          &--bold {
+            font-weight: 700;
+
+            @include for-desktop-large {
+              font-size: 40px;
+            }
+          }
+        }
+      }
+
+      &-roi {
+        &-title {
+          padding: 20px 20px 0;
+          color: #000;
+          font-size: 16px;
+          font-weight: 400;
+          margin: 0;
+
+          @include for-tablet {
+            font-size: 20px;
+            padding: 30px 0 0 30px;
+          }
+
+          @include for-desktop {
+            font-size: 24px;
+            padding-left: 50px;
+          }
+        }
+
+        &-table {
+          &-wrapper {
+            min-width: 370px;
+            width: 100%;
+            display: inline-grid;
+            padding: 0 20px;
+
+            @include for-tablet {
+              padding: 0 32px 21px 30px;
+            }
+
+            @include for-desktop {
+              padding: 0 50px 17px 50px;
+            }
+
+            @include for-desktop-large {
+              padding: 0 40px 17px 50px;
+            }
+          }
+
+          &-row {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            justify-items: center;
+            grid-auto-rows: 51px;
+            align-items: center;
+            position: relative;
+
+            @include for-tablet {
+              grid-auto-rows: 56px;
+            }
+
+            @include for-desktop-large {
+              grid-auto-rows: 53px;
+            }
+
+            &:not(:last-of-type) {
+              &::after {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 1px;
+                background: #313131;
+                bottom: 0;
+
+                @include for-tablet {
+                  width: calc(100% - 20px);
+                  background: #B8B8B8;
+                  margin-right: 10px;
+                  right: 0;
+                }
+
+                @include for-desktop {
+                  margin-right: 0;
+                  left: 0;
+                }
+              }
+            }
+
+            &--header {
+              align-items: flex-end;
+
+              &:first-of-type {
+                &::after {
+                  content: none;
+                }
+              }
+            }
+
+            &-item {
+              width: 100%;
+              color: #000;
+              font-family: 'Inter', sans-serif;
+              font-size: 12px;
+              font-weight: 400;
+
+              @include for-tablet {
+                font-size: 14px;
+              }
+
+              @include for-desktop-large {
+                font-size: 16px;
+              }
+
+              &:not(:first-of-type) {
+                text-align: center;
+              }
+
+              &--header {
+                color: #B8B8B8;
+                font-family: 'Inter', sans-serif;
+                font-size: 14px;
+                padding-bottom: 3px;
+
+                @include for-tablet {
+                  font-size: 16px;
+                }
+
+                @include for-desktop-large {
+                  font-size: 18px;
+                }
+              }
+
+              &-text {
+                &--bold {
+                  font-weight: 700;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &-payback {
+        &-title {
+          margin: 0 0 20px 0;
+          font-size: 16px;
+          color: #000000;
+          font-weight: 400;
+
+          @include for-tablet {
+            font-size: 20px;
+            max-width: 414px;
+            margin: 0 0 26px 0;
+          }
+        }
+
+        &-subgroup {
+          @include for-tablet {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+          }
+        }
+
+        &-calculation {
+          margin: 0 0 24px 0;
+          font-family: 'Inter', sans-serif;
+          font-size: 14px;
+          font-weight: 700;
+
+          @include for-tablet {
+            margin: 0;
+            font-size: 16px;
+          }
+        }
+
+        &-period {
+          margin: 0;
+          background: linear-gradient(270deg, #B276FF -12.73%, rgba(250, 173, 33, 0.59) 105.91%);
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          font-size: 32px;
+          font-weight: 400;
+        }
+      }
+
+      &-form {
+        &-title {
+          font-size: 20px;
+          font-weight: 400;
+          margin: 0 0 24px;
+
+          @include for-tablet {
+            margin: 0 0 32px;
+          }
+
+          @include for-desktop {
+            margin: 0 0 28px;
+          }
+        }
+
+        &-content {
+          margin-bottom: 30px;
+          @include for-tablet {
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+            gap: 30px;
+          }
+
+          @include for-desktop {
+            gap: 36px;
+          }
+        }
+
+        &-cost {
+          @include for-desktop {
+            text-align: center;
+          }
+
+          &-title {
+            color: #B8B8B8;
+            font-family: 'Inter', sans-serif;
+            font-size: 17px;
+            font-weight: 400;
+            margin: 0 0 4px 0;
+          }
+
+          &-value {
+            font-size: 20px;
+            font-weight: 400;
+            margin: 0 0 24px 0;
+
+            &-bold {
+              font-size: 30px;
+              font-weight: 700;
+            }
+          }
+        }
+
+        &-data {
+          &-wrapper {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 24px;
+
+            @include for-tablet {
+              grid-column-gap: 140px;
+              grid-row-gap: 30px;
+            }
+
+            @include for-desktop {
+              grid-column-gap: 100px;
+              grid-template-columns: 1fr 1fr 1fr;
+            }
+
+            @include for-desktop-large {
+              grid-column-gap: 165px;
+            }
+          }
+
+          &-item {
+            max-width: 115px;
+
+            @include for-tablet {
+              max-width: 140px;
+            }
+
+            @include for-desktop-xl {
+              max-width: 160px;
+            }
+
+            &--price {
+              @include for-desktop {
+                grid-row: 1;
+                grid-column: 3;
+              }
+            }
+
+            &--algorithm {
+              @include for-desktop {
+                grid-row: 1;
+                grid-column: 2;
+              }
+            }
+
+            &--coin {
+              @include for-desktop {
+                grid-row: 2;
+                grid-column: 1;
+              }
+            }
+
+            &-title {
+              color: #B8B8B8;
+              font-family: 'Inter', sans-serif;
+              font-size: 14px;
+              font-weight: 400;
+              margin: 0 0 4px 0;
+
+              @include for-tablet {
+                font-size: 16px;
+              }
+
+              @include for-desktop-large {
+                font-size: 17px;
+              }
+            }
+
+            &-value {
+              font-size: 16px;
+              font-weight: 700;
+              margin: 0;
+
+              @include for-tablet {
+                font-size: 18px;
+              }
+
+              @include for-desktop-large {
+                font-size: 20px;
+              }
+            }
+          }
+        }
+
+        &-fields {
+          &-wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            align-items: center;
+
+            @include for-tablet {
+              grid-row-gap: 11px;
+              grid-column-gap: 14px;
+              display: grid;
+              grid-template-columns: 1fr 1fr;
+            }
+
+            @include for-desktop {
+              grid-gap: 12px;
+              grid-template-columns: 1fr 1fr 1fr 1fr;
+            }
+
+            @include for-desktop-xl {
+              gap: 12px;
+            }
+          }
+
+          &-item {
+            height: 56px;
+            max-width: 311px;
+            border-radius: 12px;
+            border: none;
+            padding-left: 34px;
+            background: #FFF;
+            font-family: 'Inter', sans-serif;
+            font-size: 17px;
+            font-weight: 400;
+
+            @include for-tablet {
+              width: 311px;
+            }
+
+            @include for-desktop {
+              width: 200px;
+            }
+
+            @include for-desktop-large {
+              width: 267px;
+            }
+
+            @include for-desktop-xl {
+              width: 275px;
+            }
+
+            &--email {
+              @include for-desktop {
+                order: 1;
+              }
+            }
+
+            &::placeholder {
+              color: #B8B8B8;
+            }
+          }
+
+          &-btn {
+            border-radius: 12px;
+            width: 255px;
+            max-width: 311px;
+            height: 56px;
+            border: 1px solid #000;
+            margin-top: 12px;
+            background: #fff;
+            cursor: pointer;
+
+            @include for-tablet {
+              margin-top: 0;
+              width: 311px;
+            }
+
+            @include for-desktop {
+              width: 200px;
+              margin-left: 3px;
+              order: 4;
+            }
+
+            @include for-desktop-large {
+              width: 240px;
+              margin-left: -1px;
+            }
+
+            &:hover {
+              background: #F8F8F8;
+            }
+
+            &:active {
+              background: #F5F4F4;
+            }
+
+            &-text {
+              background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(50,0,250,1) 70%);
+              background-clip: text;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+            }
+          }
+        }
       }
     }
 
@@ -388,3 +1057,12 @@ body {
     }
   }
 }
+
+.myChartDiv {
+  width: 256px;
+  height: 256px;
+}
+
+#doughnutChart{
+  display: flex;
+  justify-content: center;}
