--- a/rtm-bonus/styles/bonus.scss
+++ b/rtm-bonus/styles/bonus.scss
@@ -404,6 +404,7 @@ body {
 
         @include for-desktop-large {
           padding-bottom: 224px;
+          background: linear-gradient(179deg, rgba(209, 252, 255, 1) 0%, rgba(206, 247, 255, 1) 10%, rgba(175, 207, 255, 1) 61%, rgba(176, 208, 255, 1) 73%, rgba(176, 204, 255, 1) 76%, rgba(188, 189, 255, 1) 83%, rgba(189, 188, 255, 1) 85%, rgba(188, 188, 255, 0.97) 86%, rgba(188, 187, 255, 0.93) 87%, rgba(188, 186, 255, 0.84) 88%, rgba(187, 185, 255, 0.69) 89%, rgba(189, 187, 255, 0.58) 90%, rgba(186, 186, 255, 0.37) 92%, rgba(191, 185, 255, 0.26) 93%, rgba(188, 188, 255, 0.15) 94%, rgba(191, 191, 255, 0.08) 95%, rgba(170, 170, 255, 0.02) 96%, rgba(255, 255, 255, 0) 97%, rgba(0, 0, 0, 0) 98%, rgba(0, 0, 0, 0) 100%), #EBFAFF;
         }
       }
     }
