--- a/rtm-bonus/styles/bonus.css
+++ b/rtm-bonus/styles/bonus.css
@@ -405,6 +405,7 @@ body a:visited {
 @media (min-width: 1200px) {
   .rtm__bonus-header-wrapper {
     padding-bottom: 224px;
+    background: linear-gradient(179deg, rgb(209, 252, 255) 0%, rgb(206, 247, 255) 10%, rgb(175, 207, 255) 61%, rgb(176, 208, 255) 73%, rgb(176, 204, 255) 76%, rgb(188, 189, 255) 83%, rgb(189, 188, 255) 85%, rgba(188, 188, 255, 0.97) 86%, rgba(188, 187, 255, 0.93) 87%, rgba(188, 186, 255, 0.84) 88%, rgba(187, 185, 255, 0.69) 89%, rgba(189, 187, 255, 0.58) 90%, rgba(186, 186, 255, 0.37) 92%, rgba(191, 185, 255, 0.26) 93%, rgba(188, 188, 255, 0.15) 94%, rgba(191, 191, 255, 0.08) 95%, rgba(170, 170, 255, 0.02) 96%, rgba(255, 255, 255, 0) 97%, rgba(0, 0, 0, 0) 98%, rgba(0, 0, 0, 0) 100%), #EBFAFF;
   }
 }
 .rtm__bonus-title {
