--- a/fonts/fonts.scss
+++ b/fonts/fonts.scss
@@ -18,3 +18,8 @@
   src: url("../fonts/Roboto-Bold.ttf") format("truetype");
   font-weight: 700;
 }
+@font-face {
+  font-family: "Coming Soon";
+  src: url("../fonts/ComingSoon-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
