--- a/rtm-main/styles/main.css
+++ b/rtm-main/styles/main.css
@@ -53,26 +53,31 @@ body {
   position: absolute;
   background: white;
   z-index: 10000;
-  display: none;
   font-family: "Roboto", sans-serif;
+  transition: all 0.3s ease;
+  left: -100vw;
 }
 @media (min-width: 768px) {
   .main__menu {
-    max-width: 408px;
+    max-width: 608px;
+    grid-template-columns: 408px 1fr;
   }
 }
 @media (min-width: 992px) {
   .main__menu {
-    max-width: 450px;
+    max-width: 730px;
+    grid-template-columns: 450px 1fr;
   }
 }
 @media (min-width: 1200px) {
   .main__menu {
-    max-width: 498px;
+    max-width: 778px;
+    grid-template-columns: 498px 1fr;
   }
 }
 .main__menu--active {
-  display: block;
+  display: grid;
+  left: 0;
 }
 @media (min-width: 768px) {
   .main__menu--active {
@@ -93,6 +98,9 @@ body {
   }
 }
 .main__menu-content-close-btn-wrapper {
+  position: absolute;
+  top: 32px;
+  right: 20px;
   display: flex;
   width: auto;
   height: auto;
@@ -153,6 +161,58 @@ body {
     border-radius: 8px;
     background: #ECECEC;
   }
+}
+.main__menu-price-list {
+  display: none;
+  background: #EBFAFF;
+  overflow-y: auto;
+}
+@media (min-width: 768px) {
+  .main__menu-price-list {
+    display: block;
+  }
+}
+.main__menu-price-list-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  position: relative;
+  padding: 60px 0 48px;
+  overflow-y: auto;
+}
+@media (min-width: 1200px) {
+  .main__menu-price-list-wrapper {
+    gap: 56px;
+    padding: 75px 48px;
+  }
+}
+@media (min-width: 1440px) {
+  .main__menu-price-list-wrapper {
+    gap: 83px;
+  }
+}
+.main__menu-price-list-item-image {
+  width: 121px;
+  height: 150px;
+  display: flex;
+  margin-bottom: 7px;
+}
+.main__menu-price-list-item-image img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+.main__menu-price-list-item-text {
+  text-align: center;
+  font-family: "Coming Soon", sans-serif;
+  color: #000;
+  font-size: 25px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  margin: 0;
 }
 .main__container {
   padding: 0 12px 0;
