--- a/rtm-main/styles/main.scss
+++ b/rtm-main/styles/main.scss
@@ -57,23 +57,28 @@ body {
     position: absolute;
     background: white;
     z-index: 10000;
-    display: none;
     font-family: "Roboto", sans-serif;
+    transition: all .3s ease;
+    left: -100vw;
 
     @include for-tablet {
-      max-width: 408px;
+      max-width: 608px;
+      grid-template-columns: 408px 1fr;
     }
 
     @include for-desktop {
-      max-width: 450px;
+      max-width: 730px;
+      grid-template-columns: 450px 1fr;
     }
 
     @include for-desktop-large {
-      max-width: 498px;
+      max-width: 778px;
+      grid-template-columns: 498px 1fr;
     }
 
     &--active {
-      display: block;
+      display: grid;
+      left: 0;
 
       @include for-tablet {
         position: fixed;
@@ -93,6 +98,9 @@ body {
 
       &-close-btn {
         &-wrapper {
+          position: absolute;
+          top: 32px;
+          right: 20px;
           display: flex;
           width: auto;
           height: auto;
@@ -153,6 +161,62 @@ body {
               background: #ECECEC;
             }
           }
+        }
+      }
+    }
+
+    &-price-list {
+      display: none;
+      background: #EBFAFF;
+      overflow-y: auto;
+
+      @include for-tablet {
+        display: block;
+      }
+
+      &-wrapper {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        position: relative;
+        padding: 60px 0 48px;
+        overflow-y: auto;
+
+        @include for-desktop-large {
+          gap: 56px;
+          padding: 75px 48px;
+        }
+
+        @include for-desktop-xl {
+          gap: 83px;
+        }
+      }
+
+      &-item {
+        &-image {
+          width: 121px;
+          height: 150px;
+          display: flex;
+          margin-bottom: 7px;
+
+          img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        &-text {
+          text-align: center;
+          font-family: 'Coming Soon', sans-serif;
+          color: #000;
+          font-size: 25px;
+          font-weight: 400;
+          letter-spacing: 0.5px;
+          margin: 0;
         }
       }
     }
