--- a/menu/menu.css
+++ b/menu/menu.css
@@ -2,16 +2,18 @@
   overflow-y: hidden;
   height: 100%;
 }
-.menu-active::after {
-  z-index: 1000;
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  background: linear-gradient(132deg, rgba(0, 201, 214, 0.3) 28.5%, rgba(73, 50, 217, 0.3) 98.72%);
-  backdrop-filter: blur(35px);
-  background-size: cover;
+@media (min-width: 768px) {
+  .menu-active::after {
+    z-index: 1000;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    background: linear-gradient(132deg, rgba(0, 201, 214, 0.3) 28.5%, rgba(73, 50, 217, 0.3) 98.72%);
+    backdrop-filter: blur(35px);
+    background-size: cover;
+  }
 }
 
 .main__menu {
@@ -21,6 +23,8 @@
   background: white;
   z-index: 10000;
   font-family: "Roboto", sans-serif;
+  transition: all 0.35s linear;
+  transform: translateX(-110%);
 }
 @media (min-width: 768px) {
   .main__menu {
@@ -42,6 +46,7 @@
 }
 .main__menu--active {
   display: grid;
+  transform: translateX(0%);
 }
 @media (min-width: 768px) {
   .main__menu--active {
@@ -62,6 +67,9 @@
   }
 }
 .main__menu-content-close-btn-wrapper {
+  position: absolute;
+  top: 32px;
+  right: 20px;
   display: flex;
   width: auto;
   height: auto;
