--- a/menu/menu.scss
+++ b/menu/menu.scss
@@ -3,16 +3,19 @@
 .menu-active {
   overflow-y: hidden;
   height: 100%;
-  &::after {
-    z-index: 1000;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    background: linear-gradient(132deg, rgba(0, 201, 214, .3) 28.5%, rgba(73, 50, 217, .3) 98.72%);
-    backdrop-filter: blur(35px);
-    background-size: cover;
+
+  @include for-tablet {
+    &::after {
+      z-index: 1000;
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 1;
+      background: linear-gradient(132deg, rgba(0, 201, 214, .3) 28.5%, rgba(73, 50, 217, .3) 98.72%);
+      backdrop-filter: blur(35px);
+      background-size: cover;
+    }
   }
 }
 
@@ -23,8 +26,9 @@
     position: absolute;
     background: white;
     z-index: 10000;
-    //display: none;
     font-family: "Roboto", sans-serif;
+    transition: all .35s linear;
+    transform: translateX(-110%);
 
     @include for-tablet {
       max-width: 608px;
@@ -43,6 +47,7 @@
 
     &--active {
       display: grid;
+      transform: translateX(0%);
 
       @include for-tablet {
         position: fixed;
@@ -62,6 +67,9 @@
 
       &-close-btn {
         &-wrapper {
+          position: absolute;
+          top: 32px;
+          right: 20px;
           display: flex;
           width: auto;
           height: auto;
