--- a/menu/menu.scss
+++ b/menu/menu.scss
@@ -16,6 +16,10 @@
       backdrop-filter: blur(35px);
       background-size: cover;
     }
+
+    .main__menu-price-list {
+      display: block;
+    }
   }
 }
 
@@ -138,10 +142,6 @@
       display: none;
       background: #EBFAFF;
       overflow-y: auto;
-
-      @include for-tablet {
-        display: block;
-      }
 
       &-wrapper {
         width: 100%;
