--- a/menu/menu.css
+++ b/menu/menu.css
@@ -14,6 +14,9 @@
     backdrop-filter: blur(35px);
     background-size: cover;
   }
+  .menu-active .main__menu-price-list {
+    display: block;
+  }
 }
 
 .main__menu {
@@ -135,11 +138,6 @@
   display: none;
   background: #EBFAFF;
   overflow-y: auto;
-}
-@media (min-width: 768px) {
-  .main__menu-price-list {
-    display: block;
-  }
 }
 .main__menu-price-list-wrapper {
   width: 100%;
