--- a/rtm-bonus/styles/bonus.scss
+++ b/rtm-bonus/styles/bonus.scss
@@ -18,7 +18,7 @@ html, body {
   max-width: 1200px !important;
 }
 
-.body-main {
+.body-bonus {
   background: #EBFAFF;
 }
 
@@ -52,113 +52,7 @@ body {
   }
 }
 
-.main {
-  &__menu {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: white;
-    z-index: 10000;
-    display: none;
-    font-family: "Roboto", sans-serif;
-
-    @include for-tablet {
-      max-width: 408px;
-    }
-
-    @include for-desktop {
-      max-width: 450px;
-    }
-
-    @include for-desktop-large {
-      max-width: 498px;
-    }
-
-    &--active {
-      display: block;
-
-      @include for-tablet {
-        position: fixed;
-      }
-    }
-
-    &-content {
-      height: 100%;
-      width: 100%;
-      padding: 32px 20px 0;
-      display: flex;
-      flex-direction: column;
-      @include for-tablet {
-        padding: 0;
-        position: relative;
-      }
-
-      &-close-btn {
-        &-wrapper {
-          display: flex;
-          width: auto;
-          height: auto;
-          margin-left: auto;
-          color: #777777;
-
-          @include for-tablet {
-            position: absolute;
-            right: -52px;
-            top: 16px;
-            height: 40px;
-            width: 40px;
-            justify-content: center;
-            align-items: center;
-            border: 2px solid black;
-            border-radius: 6px;
-            color: black;
-            cursor: pointer;
-          }
-        }
-
-        &-image {
-          display: flex;
-        }
-      }
-
-      &-list {
-        padding: 0;
-        list-style: none;
-        margin-top: 46px;
-        margin-bottom: 0;
-
-        @include for-tablet {
-          padding: 60px 48px 0 60px;
-          margin-top: 0;
-        }
-
-        @include for-desktop-large {
-          padding: 130px 60px 0;
-        }
-
-        &-item {
-          height: 48px;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          font-size: 18px;
-          font-weight: 400;
-          cursor: pointer;
-
-          @include for-tablet {
-            height: 64px;
-            font-size: 24px;
-            padding: 0 11px;
-
-            &:hover {
-              border-radius: 8px;
-              background: #ECECEC;
-            }
-          }
-        }
-      }
-    }
-  }
+.bonus {
   &__container {
     width: 100%;
     height: 100%;
