--- a/rtm-main/styles/main.css
+++ b/rtm-main/styles/main.css
@@ -47,6 +47,9 @@ body {
     backdrop-filter: blur(35px);
     background-size: cover;
   }
+  .menu-active .main__menu-price-list {
+    display: block;
+  }
 }
 
 .main__menu {
@@ -168,11 +171,6 @@ body {
   display: none;
   background: #EBFAFF;
   overflow-y: auto;
-}
-@media (min-width: 768px) {
-  .main__menu-price-list {
-    display: block;
-  }
 }
 .main__menu-price-list-wrapper {
   width: 100%;
