--- a/rtm-offer-page/styles/offer.scss
+++ b/rtm-offer-page/styles/offer.scss
@@ -467,6 +467,22 @@ body {
           min-height: 300px;
           padding: 0;
 
+          canvas {
+            max-height: 100%;
+            max-width: 100%;
+            margin: auto;
+
+            @include for-tablet {
+              max-width: 241px;
+              max-height: 300px;
+            }
+
+            @include for-desktop {
+              max-width: 300px;
+              max-height: 300px;
+            }
+          }
+
           @include for-tablet {
             min-height: 100%;
           }
