bonus padding fixed

--- a/rtm-bonus/styles/bonus.css
+++ b/rtm-bonus/styles/bonus.css
@@ -123,7 +123,7 @@ body a:visited {
 }
 @media (min-width: 1200px) {
   .rtm__bonus-menu-navbar {
-    padding: 0 12px 26px;
+    padding: 0 0 26px;
     max-width: 1200px;
     margin: 0 auto;
   }
