--- a/rtm-bonus/styles/bonus.scss
+++ b/rtm-bonus/styles/bonus.scss
@@ -121,7 +121,7 @@ body {
       }
 
       @include for-desktop-large {
-        padding: 0 12px 26px;
+        padding: 0 0 26px;
         max-width: 1200px;
         margin: 0 auto;
       }
