--- a/rtm-bonus/styles/bonus.scss
+++ b/rtm-bonus/styles/bonus.scss
@@ -18,7 +18,7 @@ html, body {
   max-width: 1200px !important;
 }
 
-.body-bonus {
+.body-main {
   background: #EBFAFF;
 }
 
@@ -38,17 +38,192 @@ body {
 .menu-active {
   overflow-y: hidden;
   height: 100%;
-  &::after {
-    z-index: 1000;
-    top: 0;
-    content: '';
-    position: absolute;
+
+  @include for-tablet {
+    &::after {
+      z-index: 1000;
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 1;
+      background: linear-gradient(132deg, rgba(0, 201, 214, .3) 28.5%, rgba(73, 50, 217, .3) 98.72%);
+      backdrop-filter: blur(35px);
+      background-size: cover;
+    }
+
+    .main__menu-price-list {
+      display: block;
+    }
+  }
+}
+
+.main {
+  &__menu {
     width: 100%;
     height: 100%;
-    opacity: 1;
-    background: linear-gradient(132deg, rgba(0, 201, 214, .3) 28.5%, rgba(73, 50, 217, .3) 98.72%);
-    backdrop-filter: blur(35px);
-    background-size: cover;
+    position: absolute;
+    background: white;
+    z-index: 10000;
+    font-family: "Roboto", sans-serif;
+    transition: all .35s linear;
+    transform: translateX(-110%);
+
+    @include for-tablet {
+      max-width: 608px;
+      grid-template-columns: 408px 1fr;
+    }
+
+    @include for-desktop {
+      max-width: 730px;
+      grid-template-columns: 450px 1fr;
+    }
+
+    @include for-desktop-large {
+      max-width: 778px;
+      grid-template-columns: 498px 1fr;
+    }
+
+    &--active {
+      display: grid;
+      transform: translateX(0%);
+
+      @include for-tablet {
+        position: fixed;
+      }
+    }
+
+    &-content {
+      height: 100%;
+      width: 100%;
+      padding: 32px 20px 0;
+      display: flex;
+      flex-direction: column;
+      @include for-tablet {
+        padding: 0;
+        position: relative;
+      }
+
+      &-close-btn {
+        &-wrapper {
+          position: absolute;
+          top: 32px;
+          right: 20px;
+          display: flex;
+          width: auto;
+          height: auto;
+          margin-left: auto;
+          color: #777777;
+
+          @include for-tablet {
+            position: absolute;
+            right: -52px;
+            top: 16px;
+            height: 40px;
+            width: 40px;
+            justify-content: center;
+            align-items: center;
+            border: 2px solid black;
+            border-radius: 6px;
+            color: black;
+            cursor: pointer;
+          }
+        }
+
+        &-image {
+          display: flex;
+        }
+      }
+
+      &-list {
+        padding: 0;
+        list-style: none;
+        margin-top: 46px;
+        margin-bottom: 0;
+
+        @include for-tablet {
+          padding: 60px 48px 0 60px;
+          margin-top: 0;
+        }
+
+        @include for-desktop-large {
+          padding: 130px 60px 0;
+        }
+
+        &-item {
+          height: 48px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          font-size: 18px;
+          font-weight: 400;
+          cursor: pointer;
+
+          @include for-tablet {
+            height: 64px;
+            font-size: 24px;
+            padding: 0 11px;
+
+            &:hover {
+              border-radius: 8px;
+              background: #ECECEC;
+            }
+          }
+        }
+      }
+    }
+
+    &-price-list {
+      display: none;
+      background: #EBFAFF;
+      overflow-y: auto;
+
+      &-wrapper {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        position: relative;
+        padding: 60px 0 48px;
+        overflow-y: auto;
+
+        @include for-desktop-large {
+          gap: 56px;
+          padding: 75px 48px;
+        }
+
+        @include for-desktop-xl {
+          gap: 83px;
+        }
+      }
+
+      &-item {
+        &-image {
+          width: 121px;
+          height: 150px;
+          display: flex;
+          margin-bottom: 7px;
+
+          img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        &-text {
+          text-align: center;
+          font-family: 'Coming Soon', sans-serif;
+          color: #000;
+          font-size: 25px;
+          font-weight: 400;
+          letter-spacing: 0.5px;
+          margin: 0;
+        }
+      }
+    }
   }
 }
 
