--- a/rtm-offer-page/styles/offer.css
+++ b/rtm-offer-page/styles/offer.css
@@ -466,29 +466,25 @@ body a:visited {
 .rtm__offer-blocks-item--diagram {
   border-radius: 16px;
   background: #F7F9FB;
-  min-height: 300px;
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 .rtm__offer-blocks-item--diagram canvas {
-  max-height: 100%;
-  max-width: 100%;
+  width: 185px;
+  height: 185px;
   margin: auto;
 }
 @media (min-width: 768px) {
   .rtm__offer-blocks-item--diagram canvas {
-    max-width: 241px;
-    max-height: 300px;
+    width: 241px;
+    height: 300px;
   }
 }
 @media (min-width: 992px) {
   .rtm__offer-blocks-item--diagram canvas {
-    max-width: 300px;
-    max-height: 300px;
-  }
-}
-@media (min-width: 768px) {
-  .rtm__offer-blocks-item--diagram {
-    min-height: 100%;
+    width: 230px;
+    height: 230px;
   }
 }
 .rtm__offer-blocks-item--payback {
@@ -526,6 +522,82 @@ body a:visited {
   .rtm__offer-blocks-item--form {
     padding: 30px 50px;
   }
+}
+.rtm__offer-blocks-legend-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 21px;
+  margin-bottom: 17px;
+  gap: 9px;
+}
+@media (min-width: 768px) {
+  .rtm__offer-blocks-legend-wrapper {
+    align-items: flex-start;
+    margin-left: 30px;
+    margin-bottom: 25px;
+  }
+}
+@media (min-width: 992px) {
+  .rtm__offer-blocks-legend-wrapper {
+    flex-direction: row;
+    margin-left: 7px;
+    margin-top: 13px;
+    margin-bottom: 17px;
+    gap: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .rtm__offer-blocks-legend-wrapper {
+    margin-left: 45px;
+    margin-bottom: 11px;
+    gap: 28px;
+    margin-top: 10px;
+  }
+}
+@media (min-width: 1440px) {
+  .rtm__offer-blocks-legend-wrapper {
+    margin-left: 0;
+    margin-right: 0;
+    justify-content: center;
+  }
+}
+.rtm__offer-blocks-legend-item {
+  display: flex;
+  align-items: center;
+}
+.rtm__offer-blocks-legend-item-percentage {
+  width: 67px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  font-family: "Inter", sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  background: #F7F9FB;
+  border-radius: 50em;
+  border: 3px solid transparent;
+  margin-right: 5px;
+}
+@media (min-width: 1200px) {
+  .rtm__offer-blocks-legend-item-percentage {
+    height: 39px;
+    border-radius: 1em;
+  }
+}
+.rtm__offer-blocks-legend-item-percentage--income {
+  background: linear-gradient(white, white) padding-box, linear-gradient(to right, #B276FF 0%, #FEAB00 97.75%) border-box;
+}
+.rtm__offer-blocks-legend-item-percentage--costs {
+  background: linear-gradient(white, white) padding-box, linear-gradient(to right, #0882EA 0%, #407E7A 97.75%) border-box;
+}
+.rtm__offer-blocks-legend-item-text {
+  color: #000;
+  font-family: "Inter", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
 }
 .rtm__offer-blocks-feature {
   display: flex;
