--- a/rtm-offer-page/styles/offer.scss
+++ b/rtm-offer-page/styles/offer.scss
@@ -464,27 +464,24 @@ body {
         &--diagram {
           border-radius: 16px;
           background: #F7F9FB;
-          min-height: 300px;
           padding: 0;
+          display: flex;
+          flex-direction: column;
 
           canvas {
-            max-height: 100%;
-            max-width: 100%;
+            width: 185px;
+            height: 185px;
             margin: auto;
 
             @include for-tablet {
-              max-width: 241px;
-              max-height: 300px;
+              width: 241px;
+              height: 300px;
             }
 
             @include for-desktop {
-              max-width: 300px;
-              max-height: 300px;
+              width: 230px;
+              height: 230px;
             }
-          }
-
-          @include for-tablet {
-            min-height: 100%;
           }
         }
 
@@ -518,6 +515,87 @@ body {
 
           @include for-desktop {
             padding: 30px 50px;
+          }
+        }
+      }
+
+      &-legend {
+        &-wrapper {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-top: 21px;
+          margin-bottom: 17px;
+          gap: 9px;
+
+          @include for-tablet {
+            align-items: flex-start;
+            margin-left: 30px;
+            margin-bottom: 25px;
+          }
+
+          @include for-desktop {
+            flex-direction: row;
+            margin-left: 7px;
+            margin-top: 13px;
+            margin-bottom: 17px;
+            gap: 20px;
+          }
+
+          @include for-desktop-large {
+            margin-left: 45px;
+            margin-bottom: 11px;
+            gap: 28px;
+            margin-top: 10px;
+          }
+
+          @include for-desktop-xl {
+            margin-left: 0;
+            margin-right: 0;
+            justify-content: center;
+          }
+        }
+
+        &-item {
+          display: flex;
+          align-items: center;
+
+          &-percentage {
+            width: 67px;
+            height: 28px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #000;
+            font-family: 'Inter', sans-serif;
+            font-size: 12px;
+            font-weight: 700;
+            background: #F7F9FB;
+            border-radius: 50em;
+            border: 3px solid transparent;
+            margin-right: 5px;
+
+            @include for-desktop-large {
+              height: 39px;
+              border-radius: 1em;
+            }
+
+            &--income {
+              background: linear-gradient(white, white) padding-box,
+              linear-gradient(to right, #B276FF 0%, #FEAB00 97.75%) border-box;
+            }
+
+            &--costs {
+              background: linear-gradient(white, white) padding-box,
+              linear-gradient(to right, #0882EA 0%, #407E7A 97.75%) border-box;
+            }
+          }
+
+          &-text {
+            color: #000;
+            font-family: 'Inter', sans-serif;
+            font-size: 12px;
+            font-weight: 400;
           }
         }
       }
