form fields fixed

--- a/rtm-offer-page/styles/offer.css
+++ b/rtm-offer-page/styles/offer.css
@@ -1030,7 +1030,7 @@ body a:visited {
 }
 .rtm__offer-blocks-form-fields-item {
   height: 56px;
-  max-width: 311px;
+  width: 100%;
   border-radius: 12px;
   border: none;
   padding-left: 34px;
