--- a/rtm-offer-page/styles/offer.scss
+++ b/rtm-offer-page/styles/offer.scss
@@ -1040,7 +1040,7 @@ body {
 
           &-item {
             height: 56px;
-            max-width: 311px;
+            width: 100%;
             border-radius: 12px;
             border: none;
             padding-left: 34px;
