added common folder + styles are now grouped

--- a/rtm-contacts/styles/contacts.css
+++ b/rtm-contacts/styles/contacts.css
@@ -1,4 +1,3 @@
-@import "../../../rtm-offer/fonts/fonts.css";
 * {
   box-sizing: border-box;
 }
@@ -31,130 +30,6 @@ body a:visited {
   color: inherit;
 }
 
-.menu-active {
-  overflow-y: hidden;
-  height: 100%;
-}
-.menu-active::after {
-  z-index: 1000;
-  top: 0;
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  background: linear-gradient(132deg, rgba(0, 201, 214, 0.3) 28.5%, rgba(73, 50, 217, 0.3) 98.72%);
-  backdrop-filter: blur(35px);
-  background-size: cover;
-}
-
-.main__menu {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: white;
-  z-index: 10000;
-  display: none;
-  font-family: "Roboto", sans-serif;
-}
-@media (min-width: 768px) {
-  .main__menu {
-    max-width: 408px;
-  }
-}
-@media (min-width: 992px) {
-  .main__menu {
-    max-width: 450px;
-  }
-}
-@media (min-width: 1200px) {
-  .main__menu {
-    max-width: 498px;
-  }
-}
-.main__menu--active {
-  display: block;
-}
-@media (min-width: 768px) {
-  .main__menu--active {
-    position: fixed;
-  }
-}
-.main__menu-content {
-  height: 100%;
-  width: 100%;
-  padding: 32px 20px 0;
-  display: flex;
-  flex-direction: column;
-}
-@media (min-width: 768px) {
-  .main__menu-content {
-    padding: 0;
-    position: relative;
-  }
-}
-.main__menu-content-close-btn-wrapper {
-  display: flex;
-  width: auto;
-  height: auto;
-  margin-left: auto;
-  color: #777777;
-}
-@media (min-width: 768px) {
-  .main__menu-content-close-btn-wrapper {
-    position: absolute;
-    right: -52px;
-    top: 16px;
-    height: 40px;
-    width: 40px;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid black;
-    border-radius: 6px;
-    color: black;
-    cursor: pointer;
-  }
-}
-.main__menu-content-close-btn-image {
-  display: flex;
-}
-.main__menu-content-list {
-  padding: 0;
-  list-style: none;
-  margin-top: 46px;
-  margin-bottom: 0;
-}
-@media (min-width: 768px) {
-  .main__menu-content-list {
-    padding: 60px 48px 0 60px;
-    margin-top: 0;
-  }
-}
-@media (min-width: 1200px) {
-  .main__menu-content-list {
-    padding: 130px 60px 0;
-  }
-}
-.main__menu-content-list-item {
-  height: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 18px;
-  font-weight: 400;
-  cursor: pointer;
-}
-@media (min-width: 768px) {
-  .main__menu-content-list-item {
-    height: 64px;
-    font-size: 24px;
-    padding: 0 11px;
-  }
-  .main__menu-content-list-item:hover {
-    border-radius: 8px;
-    background: #ECECEC;
-  }
-}
 .main__container {
   padding: 0 12px 0;
   width: 100%;
@@ -186,161 +61,7 @@ body a:visited {
     padding: 0;
   }
 }
-.main__footer {
-  margin-top: auto;
-  width: 100%;
-  align-self: flex-end;
-  padding-bottom: 22px;
-}
-@media (min-width: 768px) {
-  .main__footer {
-    padding-bottom: 21px;
-  }
-}
-@media (min-width: 992px) {
-  .main__footer {
-    padding-bottom: 28px;
-  }
-}
-@media (min-width: 1200px) {
-  .main__footer {
-    padding-bottom: 33px;
-  }
-}
-@media (min-width: 1440px) {
-  .main__footer {
-    padding-bottom: 28px;
-  }
-}
-.main__footer-copyright {
-  margin: 0;
-  font-size: 10px;
-  font-weight: 500;
-  text-align: center;
-}
 
-.rtm__contacts-menu-wrapper {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 20px;
-  padding-bottom: 16px;
-  border-bottom: 1px solid #000000;
-  font-size: 18px;
-  font-weight: 500;
-}
-@media (min-width: 768px) {
-  .rtm__contacts-menu-wrapper {
-    padding: 0;
-    font-size: 20px;
-  }
-}
-.rtm__contacts-menu-mobile {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-}
-.rtm__contacts-menu-mobile:hover {
-  color: rgb(124, 124, 124);
-}
-.rtm__contacts-menu-mobile:active {
-  color: rgb(188, 188, 188);
-}
-@media (min-width: 768px) {
-  .rtm__contacts-menu-mobile {
-    gap: 8px;
-    padding-top: 41px;
-    padding-bottom: 27px;
-  }
-}
-@media (min-width: 992px) {
-  .rtm__contacts-menu-mobile {
-    padding-top: 38px;
-    padding-bottom: 30px;
-    cursor: pointer;
-  }
-}
-@media (min-width: 1200px) {
-  .rtm__contacts-menu-mobile {
-    padding-top: 41px;
-    padding-bottom: 32px;
-  }
-}
-.rtm__contacts-menu-logo {
-  margin: 0;
-  color: #000000;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-}
-.rtm__contacts-menu-logo:hover {
-  color: rgb(124, 124, 124);
-}
-.rtm__contacts-menu-logo:active {
-  color: rgb(188, 188, 188);
-}
-@media (min-width: 768px) {
-  .rtm__contacts-menu-logo {
-    font-size: 20px;
-    padding-top: 38px;
-    padding-bottom: 30px;
-  }
-}
-@media (min-width: 1200px) {
-  .rtm__contacts-menu-logo {
-    padding-bottom: 35px;
-  }
-}
-.rtm__contacts-menu-language-selector {
-  position: relative;
-  cursor: pointer;
-  display: inline-block;
-}
-.rtm__contacts-menu-language-selector:hover {
-  color: rgb(124, 124, 124);
-}
-.rtm__contacts-menu-language-selector:first-of-type::after {
-  content: "";
-  position: absolute;
-  height: 24px;
-  width: 2px;
-  left: 29px;
-  background: black;
-}
-@media (min-width: 1200px) {
-  .rtm__contacts-menu-language-selector:first-of-type::after {
-    left: 29px;
-  }
-}
-.rtm__contacts-menu-language-selector-wrapper {
-  display: none;
-}
-@media (min-width: 768px) {
-  .rtm__contacts-menu-language-selector-wrapper {
-    display: flex;
-    gap: 15px;
-    padding-top: 38px;
-    padding-bottom: 25px;
-  }
-}
-@media (min-width: 992px) {
-  .rtm__contacts-menu-language-selector-wrapper {
-    padding-top: 36px;
-    padding-bottom: 27px;
-  }
-}
-@media (min-width: 1200px) {
-  .rtm__contacts-menu-language-selector-wrapper {
-    padding-top: 41px;
-    padding-bottom: 32px;
-  }
-}
-.rtm__contacts-menu-language-selector--active {
-  background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
-  background-clip: text;
-  -webkit-box-decoration-break: clone;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
 .rtm__contacts-content-wrapper {
   margin-top: 32px;
   margin-bottom: 5px;
@@ -523,4 +244,4 @@ body a:visited {
   height: 40px;
 }
 
-/*# sourceMappingURL=bonus.css.map */
+/*# sourceMappingURL=contacts.css.map */
